...
  object GalleryButtonTag {
    const val SINGLE_TAG = "singleGalleryButtonTag"
    const val MULTIPLE_TAG = "multipleGalleryButtonTag"
  }

  object CustomLocationDialogTags {
    const val DIALOG_TITLE = "customLocationDialogTitle"
    const val LOCATION_TEXT_FIELD = "customLocationDialogTextField"
    const val CONFIRM_BUTTON = "customLocationDialogConfirmButton"
    const val CLOSE_BUTTON = "customLocationDialogCloseButton"
    const val DROPDOWN_MENU = "customLocationDialogDropdownMenu"

    fun locationSuggestion(index: Int): String = "customLocationDialogSuggestion$index"

...
    const val PRICE_FIELD = "priceField"

    const val DESCRIPTION_FIELD = "descField"

    const val GRADE_FIELD = "gradeField"

    const val DELETE_BUTTON = "deleteButton"

    const val SAVE_BUTTON = "saveButton"

    const val REVIEW_TITLE = "reviewTitleField"
    const val PHOTOS = "editReviewPhotos"
  }
...
  }

  object FullScreenImageViewerTags {
    fun imageTag(uri: Uri): String = "FullScreenImageViewerImage$uri"

    const val DELETE_BUTTON = "FullScreenImageViewerDeleteButton"
    const val LEFT_ARROW_BUTTON = "FullScreenImageViewerLeftArrowButton"
    const val RIGHT_ARROW_BUTTON = "FullScreenImageViewerRightArrowButton"
  }

  object ChannelsScreenTestTags {
    const val ROOT = "channelsScreenRoot"
    const val SEARCH_BAR = "channelsSearchBar"
    const val REQUESTED_MESSAGES_BUTTON = "requestedMessagesButton"
...
    const val SETTINGS_ICON = "profileSettingsIcon"
  }

  object FilterTestTags {
    const val MIN_PRICE = "price_min_text"
    const val MAX_PRICE = "price_max_text"
    const val SLIDER_PRICE = "price_slider"
    const val MAX_SIZE = "size_max_text"
    const val MIN_SIZE = "size_min_text"
    const val SLIDER_SIZE = "size_slider"
    const val BUDGET = "budget"
    const val PREFERRED_SIZE = "preferred_size"
    const val PREFERRED_ROOM_TYPE = "preferred_room_type"
    const val SIGN_UP_WITH_PREFERENCES = "sign_up_with_preferences"
    const val LOCATION_PREFERENCE = "locationField"
  }

  object ShareLinkDialogTags {
    const val SHARE_BTN = "shareButton"
    const val DIALOG_TITLE = "shareLinkDialogTitle"
    const val QR_CODE = "shareLinkDialogQrCode"
...
