...
    
    <!-- BrowseCityViewModel -->
    <string name="browse_city_vm_failed_to_load_listings">Failed to load listings</string>
    <string name="browse_city_vm_failed_to_load_residencies">Failed to load listings</string>
    <string name="browse_city_vm_price_per_month">.-/month</string>
    <!-- EditPreferencesScreen -->
    <string name="listing_preferences">Preferences</string>
    <string name="save_preferences">Save Preferences</string>

    <!-- BookmarkedListingsScreen -->
    <string name="bookmarked_listings_title">Bookmarked Listings</string>
    <string name="bookmarked_listings_no_bookmarks_yet">No bookmarked listings yet.</string>
    <string name="bookmarked_listings_failed_to_load">Failed to load bookmarked listings</string>
    <string name="bookmarked_listings_no_image">No image</string>
...
